--- a/frontend/src/components/coupon.scss
+++ b/frontend/src/components/coupon.scss
@@ -4,7 +4,7 @@
     border:2px solid black;
     border-radius: 20px;
     overflow: hidden;
-    
+    margin:20px;
 
     .img{
         height: 45%;
