--- a/frontend/src/components/coupon.scss
+++ b/frontend/src/components/coupon.scss
@@ -1,17 +1,19 @@
 .coupon{
     height: 250px;
-    width:200px;
+    width:220px;
     border:2px solid black;
     border-radius: 20px;
     overflow: hidden;
+    margin: 10px;
     
 
     .img{
-        height: 45%;
-        
+        height: 35%;
+       
         img{
             width: 100%;
             height:100%;
+            object-fit: cover;
             
         }
     }
@@ -29,9 +31,11 @@
     }
     .details{
         width:200px;
+        padding: 5px;
         .description{
+            box-sizing: border-box;
             width:100%;
-            height:40px;
+            height:50px;
             font-size: small;
             margin-top: 10px;
             margin-bottom: 7px;
