--- a/frontend/src/components/home.scss
+++ b/frontend/src/components/home.scss
@@ -1,4 +1,9 @@
 .home{
-    display:grid;         
-    overflow:scroll ;
+    display:flex;         
+    flex-wrap: wrap;
+    margin: auto;
+    width: 70%;
+    align-items: center;
+    justify-content: center;
+
 }
