--- a/frontend/src/components/home.scss
+++ b/frontend/src/components/home.scss
@@ -1,23 +1,21 @@
-.home{
-    
-    display:flex;         
-    flex-wrap: wrap;
-    margin: auto;
-   padding-top: 50px;
-    width: 70%;
-    align-items: center;
+.home {
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  padding-top: 50px;
+  width: 70%;
+  align-items: center;
+  justify-content: center;
+  background-color: aliceblue;
+
+  .heading {
+    display: flex;
     justify-content: center;
-    background-color: aliceblue;
-    
-    .heading{
-        display: flex;
-        justify-content: center;
-        margin-bottom: 40px;
-        width:100%;
-        font-size: 60px;
-        font-weight: 700;
-        font-family: cursive;
-        color:rgb(14, 5, 59)
-        
-    }
+    margin-bottom: 40px;
+    width: 100%;
+    font-size: 60px;
+    font-weight: 700;
+    font-family: cursive;
+    color: rgb(14, 5, 59);
+  }
 }
