--- a/frontend/src/components/home.scss
+++ b/frontend/src/components/home.scss
@@ -1,3 +1,4 @@
+@import "../variables.scss";
 .home {
   display: flex;
   flex-wrap: wrap;
@@ -6,16 +7,18 @@
   width: 70%;
   align-items: center;
   justify-content: center;
-  background-color: aliceblue;
+  background-color: $color5;
 
   .heading {
     display: flex;
     justify-content: center;
     margin-bottom: 40px;
     width: 100%;
-    font-size: 60px;
-    font-weight: 700;
-    font-family: cursive;
-    color: rgb(14, 5, 59);
+    font-size: 48px;
+    font-weight: 600;
+    // font-family: cursive;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+    color: $color3;
   }
 }
