--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -8,5 +8,9 @@
 }
 body{
     background-color: $color4;
+    background-image: url('/assets/noun-dot-2435540-removebg-preview.png');
+  background-size: 40px;
+// background-size: auto ;
+// background-position: right 10px center;
 }
 
