--- a/frontend/src/components/user.scss
+++ b/frontend/src/components/user.scss
@@ -9,7 +9,7 @@
     width: 100%;
     display: flex;
     margin-top: 10px;
-    margin-bottom: 25px;
+    // margin-bottom: 25px;
     .pic{
       width: 33%;
       display: flex;
@@ -53,7 +53,7 @@
     border-top: 0;
   }
   .user-coupons {
-    margin: 20px;
+    // margin: 20px 0;
     padding-bottom: 50px;
     width: 100%;
     display: flex;
@@ -65,7 +65,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-bottom: 10px;
+      margin: 10px;
       li{
         list-style: none;
         cursor: pointer;
