--- a/frontend/src/components/home.scss
+++ b/frontend/src/components/home.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-wrap: wrap;
   margin: auto;
-  padding-top: 50px;
+  padding: 50px 0;
   width: 70%;
   align-items: center;
   justify-content: center;
