--- a/frontend/src/components/user.scss
+++ b/frontend/src/components/user.scss
@@ -10,6 +10,7 @@
     display: flex;
     margin-top: 10px;
     // margin-bottom: 25px;
+    padding: 20px 0;
     .pic{
       width: 33%;
       display: flex;
