--- a/frontend/src/components/user.scss
+++ b/frontend/src/components/user.scss
@@ -4,7 +4,7 @@
   margin: auto;
   padding-top: 50px;
   width: 70%;
-  background-color: antiquewhite;
+ background-color: azure;
   .user-profile {
     width: 100%;
     display: flex;
@@ -52,6 +52,18 @@
     margin: auto;
     border: 1px solid grey;
     border-top: 0;
+  }
+  .addcoupon{
+    width: 100%;
+    margin-left: auto;
+    display: flex;
+    justify-content: center;
+
+    button{
+      margin-top: 5px;
+      background-color: $color4;
+    
+    }
   }
   .user-coupons {
     // margin: 20px 0;
