add coupon form added

--- a/frontend/src/components/user.scss
+++ b/frontend/src/components/user.scss
@@ -59,7 +59,7 @@
     display: flex;
     justify-content: center;
 
-    button{
+    >button{
       margin-top: 5px;
       background-color: $color4;
     
