--- a/frontend/src/components/user.scss
+++ b/frontend/src/components/user.scss
@@ -1,10 +1,11 @@
 @import "../variables.scss";
 
-.user {
+.user{
   margin: auto;
   padding-top: 50px;
   width: 70%;
  background-color: azure;
+ 
   .user-profile {
     width: 100%;
     display: flex;
@@ -59,7 +60,7 @@
     display: flex;
     justify-content: center;
 
-    >button{
+    button{
       margin-top: 5px;
       background-color: $color4;
     
