--- a/frontend/src/components/coupon.scss
+++ b/frontend/src/components/coupon.scss
@@ -1,73 +1,49 @@
-.coupon-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 70%; /* Increased width */
-  margin: 0 auto;
-  
-  border: 1px solid #cccccc;
-  background-color: #bbced6;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-
-  .image{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+.coupon{
+    height: 255px;
+    width:220px;
+    border:2px solid black;
+    border-radius: 20px;
+    overflow: hidden;
+    margin: 10px;
     
-    img{
-        margin-right: 10px;
-        height: 50px;
+
+    .img{
+        height: 33%;
+       
+        img{
+            width: 100%;
+            height:100%;
+            object-fit: cover;
+            
+        }
+    }
+    .coupon-img{
+       height: 50px;
         width: 50px;
+        margin:10px;
+        border-radius: 50%;
         
+        margin-top: -25px;
+        img{
+            width: 100%;
+            height:100%;
+        }
     }
-  }
-  h2 {
-    color: #333;
-  }
-
-  hr {
-    width: 100%;
-    border: 0;
-    border-top: 1px solid #ddd;
-  }
-   .coupon{
-    width: 100%;
-    background-color: #f8fafa;
-    margin: 0;
-  .coupon-details {
-    display: flex;
-    flex-direction: row; /* Change to row for a horizontal layout */
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-bottom: 20px;
-    
-
-    div {
-      width: 48%; /* Adjust width as needed */
-      margin-bottom: 10px;
-
-      strong {
-        display: block;
-        margin-bottom: 4px;
-        color: #555;
-      }
+    .details{
+        width:200px;
+        padding: 5px;
+        .description{
+            box-sizing: border-box;
+            width:100%;
+            height:50px;
+            font-size: small;
+            margin-top: 10px;
+            margin-bottom: 7px;
+            overflow:hidden;
+        }
     }
-  }
-
-  .coupon-description {
-    width: 100%;
-
-    strong {
-      display: block;
-      margin-bottom: 8px;
+    .valid{
+        margin-top: 5px;
     }
 
-    p {
-      margin: 0;
-      color: #555;
-    }
-  }
-   }
-  margin-bottom: 40px;
 }
