added user routes

--- a/frontend/src/components/home.scss
+++ b/frontend/src/components/home.scss
@@ -7,7 +7,7 @@
   width: 70%;
   align-items: center;
   justify-content: center;
-  background-color: $color5;
+  background-color: white;
   
 
   .heading {
