--- a/frontend/src/components/Login.scss
+++ b/frontend/src/components/Login.scss
@@ -19,8 +19,39 @@ $border-color: #bdc3c7;
 // }
 
 // Form container
+.login-full{
+     display: flex;
+     flex-direction: row;
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+      box-sizing: border-box;
+     
+
+.login-logo{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+   width:40%;
+   background-color: #ffffffa9;
+   overflow: hidden;
+   border-top-right-radius: 4%;
+   img{
+    margin-top: 20vh;
+    width: 35%;
+   }
+   .text{
+         font-size: 4vw;
+            color:  #306492;
+            font-weight: 600;
+   }
+}
+.login-cover{
+   width:60%;
+   overflow: hidden;
 .login{
-  margin: calc(50vh - 130px) auto;
+  margin: calc(42vh - 130px) auto;
+  
   background-color: #dce3ed;
   padding: 20px;
   border-radius: 20px;
@@ -59,6 +90,7 @@ input {
   &:hover {
     background-color: darken($primary-color, 10%);
   }
-}
-
+   }
+  }
+ }
 }
