--- a/frontend/src/components/home.scss
+++ b/frontend/src/components/home.scss
@@ -1,10 +1,18 @@
 @import "../variables.scss";
+.home-full{
+display: flex;
+flex-direction: row;
+.options{
+  background-color: $color4;
+  width: 20%;
+
+}
 .home {
   display: flex;
   flex-wrap: wrap;
   margin: auto;
   padding: 50px 0;
-  width: 70%;
+  width: 80%;
   align-items: center;
   justify-content: center;
   background-color: white;
@@ -22,4 +30,5 @@
 
     color: $color3;
   }
+}
 }
