--- a/frontend/src/components/navbar.scss
+++ b/frontend/src/components/navbar.scss
@@ -26,11 +26,19 @@
         }
     }
     .nav-main{
+        width: 100%;
         display: flex;
         flex-direction: column;
+        align-items: center;
         .nav-input{
-           input{
-            background: rgba(255, 255, 255, 0.329);
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          input{
+            background: rgb(97 127 162);
+            min-width: 40vw;
+            z-index: 5;
             border: none;
             border-radius: 20px;
             padding: 10px;
@@ -43,10 +51,27 @@
         }
         }
         .search-results {
-            overflow-y: scroll;
+            position:absolute;
+            width: 40vw;
+            z-index: 0;
+            top: 50px;
+            // overflow-y: scroll;
+            // padding: 20px 0px;
             list-style-type: none; /* Remove default list styles */
-            padding: 0;
+            // padding: 0;
             margin: 10px 0;
+            margin-top: -6px;
+            background: rgb(97 127 162);
+            border-radius: 0 0 20px 20px;
+            li{
+                padding: 5px 10px;
+                &:first-child{
+                    padding-top: 30px;
+                }
+                &:last-child{
+                    padding-bottom: 20px;
+                }
+            }
           }
           
         }
