--- a/frontend/src/components/navbar.scss
+++ b/frontend/src/components/navbar.scss
@@ -7,6 +7,7 @@
     justify-content: space-between;
     background-color: $color1;
     color: $color5;
+    // overflow-y: scroll;
     .logo{
         display: flex;
         align-items: center;
@@ -26,6 +27,7 @@
         }
     }
     .nav-main{
+        // overflow-y: scroll;
         display: flex;
         flex-direction: column;
         .nav-input{
@@ -43,7 +45,7 @@
         }
         }
         .search-results {
-            overflow-y: scroll;
+            
             list-style-type: none; /* Remove default list styles */
             padding: 0;
             margin: 10px 0;
