search bar, single coupon style, coupand expand updated

--- a/frontend/src/components/user.scss
+++ b/frontend/src/components/user.scss
@@ -103,14 +103,14 @@
       background-color: #2a477b /* Slightly darker red color on hover */
     }
   }
+  .wrap{
+     margin-left: 30px;
+    display: flex;
   .user-coupons {
     // margin: 20px 0;
     padding-bottom: 50px;
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+    margin-left: 50px;
     ul{
       width: 100%;
       display: flex;
@@ -127,5 +127,115 @@
       }
 
     }
+  }
+  }
+  .div{
+    display: flex;
+   
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+    
+    
+    .couponbig {
+      
+      max-width: 40%;
+      min-width: 35%;
+      background-color: #f9f9f9;
+      border-radius: 15px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+      padding: 30px;
+      padding-left: 5px;
+    
+    
+    
+    .wrap {
+      display: flex;
+      // margin-top: 20px;
+    
+      .img {
+        text-align: left;
+      img {
+        max-width: 100%;
+        height: auto;
+       
+        border-radius: 15px;
+        margin-right: 20px;
+      }
+    }
+    
+    .details {
+      flex: 1;
+      padding-left: 10px;
+    
+      .email{
+        font-size: 22px;
+      font-weight: bold;
+      margin-bottom: 10px;
+      color: #333;
+      }
+    .title {
+      font-size: 22px;
+      font-weight: bold;
+      margin-bottom: 10px;
+      color: #333;
+    }
+    
+    .category,.website{
+      margin: 8px 0px;
+      font-weight:600;
+      color: #666;
+       span{
+        color: black;
+       }
+    }
+    
+    // .description {
+    //   font-size: 16px;
+    // }
+    
+    .valid {
+      margin: 10px 0px;
+      font-size: 14px;
+      font-weight: 400;
+      color: #888;
+    }
+    .code{
+      margin-top: 4px;
+      padding:7px 10px;
+
+      background-color: #61778c; // Use your color variable $color3
+      color: #EEF4ED;
+      width:fit-content;
+      border-radius: 5px;
+    }
+  }
+}
+    .description{
+      margin-left: 30px;
+      margin-top: 15px;
+    }
+    button {
+      
+      margin-top: 15px;
+      margin-left: 48%;
+      padding: 10px 20px;
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+
+      &:hover{
+        background-color: #0056b3;
+      }
+    }
+  }
   }
 }
