--- a/frontend/src/components/footer.scss
+++ b/frontend/src/components/footer.scss
@@ -5,7 +5,8 @@
     background-color:$color3;
     color: #fff;
     padding: 50px 0;
-    
+    margin-bottom: 0;
+  
     .row{
         display: flex;
         width: 100%;
