--- a/frontend/src/components/navbar.scss
+++ b/frontend/src/components/navbar.scss
@@ -16,10 +16,15 @@
             height: 80px;
             object-fit: cover;
             border-radius: 20px;
+            &:hover{
+                transform: scale(1.2); 
+                transition: transform 0.3s ease;
+            }
         } 
         >div{
             >div:first-child{
                 font-size: 1.4rem;
+
             }
             font-size: 1.3rem;
             color: white;
@@ -38,8 +43,8 @@
             justify-content: center;
           input{
             background: rgb(97 127 162);
-            min-width: 40vw;
-            z-index: 5;
+            min-width: 27vw;
+            z-index: 2;
             border: none;
             border-radius: 20px;
             padding: 10px;
@@ -53,11 +58,10 @@
         }
         .search-results {
             position:absolute;
-            width: 40vw;
+            width: 27vw;
             z-index: 0;
             top: 50px;
-            // overflow-y: scroll;
-            // padding: 20px 0px;
+            
             list-style-type: none; /* Remove default list styles */
             // padding: 0;
             margin: 10px 0;
@@ -65,12 +69,18 @@
             background: rgb(97 127 162);
             border-radius: 0 0 20px 20px;
             li{
+                
                 padding: 5px 10px;
                 &:first-child{
                     padding-top: 30px;
                 }
                 &:last-child{
                     padding-bottom: 20px;
+                }
+                &:hover{
+                    cursor: pointer;
+                    background-color: rgb(24, 53, 87);
+                    
                 }
             }
           }
@@ -84,6 +94,10 @@
             height: 50px;
             width: 50px;
             padding: 0 10px;
+            &:hover{
+                transform: scale(1.2); 
+                transition: transform 0.3s ease;
+            }
 
         }
     }
